--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,31 @@
 #main-container {
-    height: auto;
-    width: auto;
-    
-}
+    grid-template-columns: 40px 50px auto 50px 40px;
+    grid-template-rows: 25% 100px auto;
+    background-color: blueviolet;
+  }
 
 .numBox{
-    height: 5em;
-    width: 5em;
+    display: inline-block;
+    height: 100px;
+    width: 100px;
     background-color: aqua;
     border-color: black;
     border-style: solid;
     border-radius: 10%;
-
-}
-
-.text {
-    /* display: flex; */
+    align-self: center;
     text-align: center;
+    vertical-align: middle;
 }
+
+/* .text {
+    align-content: center;
+    vertical-align: middle;
+} */
+
+.container-div {
+    grid-column-start: 2;
+    grid-column-end: five;
+    grid-row-start: row1-start;
+    grid-row-end: 3;
+}
+
